--- a/index.html
+++ b/index.html
@@ -660,12 +660,15 @@ function deg2rad(deg) { return deg * Math.PI / 180; }
 		var animate = function () {
 
 			if ( audio.currentTime === audio.duration ) {
+
+				fullScreen(false);
+
 				audio.style.display = 'none';
 				document.getElementById("credits").style.visibility = "visible";
 				
 				var info = document.getElementById( 'loadinglayer' );
 				info.style.display = '';
-				
+
 				return;
 			}
 			requestAnimationFrame( animate );
@@ -674,8 +677,39 @@ function deg2rad(deg) { return deg * Math.PI / 180; }
 
 		};
 
-		var start = function () {
+		function fullScreen( on ) {	
 
+  			if ( on )
+  			{
+	  			if (!document.fullscreenElement &&    // alternative standard method
+					!document.mozFullScreenElement && !document.webkitFullscreenElement && !document.msFullscreenElement )  // current working methods
+	      		{  
+					if (document.body.requestFullscreen) 
+						document.body.requestFullscreen();
+				    else if (document.body.msRequestFullscreen) 
+				    	document.body.msRequestFullscreen();
+					else if (document.body.mozRequestFullScreen)
+						document.body.mozRequestFullScreen();
+					else if (document.body.webkitRequestFullscreen)
+						document.body.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+				} 
+			}
+			else 
+			{
+			    if (document.exitFullscreen)
+					document.exitFullscreen();
+			    else if (document.msExitFullscreen)
+					document.msExitFullscreen();
+			    else if (document.mozCancelFullScreen)
+			  		document.mozCancelFullScreen();
+			    else if (document.webkitExitFullscreen)
+					document.webkitExitFullscreen();
+			}
+		}
+
+		var start = function () {
+			
+			fullScreen( true );
 			audio.style.display = '';
 			
 			audio.volume=1;
@@ -728,7 +762,7 @@ function deg2rad(deg) { return deg * Math.PI / 180; }
 					<br/><br/>
 					<a href="https://github.com/kile/thisway.js" target="_blank">source code</a><!--, <a href="http://www.youtube.com/watch?v=sW_fel34VK4" target="_blank">video</a>-->
 					<br/>
-					<span style="color:#555;margin-top:20px;font-size:10px">January 19 2014</span>
+					<span style="color:#555;margin-top:20px;font-size:10px">18th January 2014</span>
   			</div>
  		</div>
 	</body>
