--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ function deg2rad(deg) { return deg * Math.PI / 180; }
 					<br/><br/>
 					<a href="https://github.com/kile/thisway.js" target="_blank">source code</a><!--, <a href="http://www.youtube.com/watch?v=sW_fel34VK4" target="_blank">video</a>-->
 					<br/>
-					<span style="color:#555;margin-top:20px;font-size:10px">18th January 2014</span>
+					<span style="color:#555;margin-top:20px;font-size:10px">January 19, 2014</span>
   			</div>
  		</div>
 	</body>
