--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ function deg2rad(deg) { return deg * Math.PI / 180; }
 
 		var animate = function () {
 
-			if ( audio.currentTime === audio.duration ) {
+			if ( audio.duration > 0 && audio.currentTime === audio.duration ) {
 
 				fullScreen(false);
 
